force-app/main/default/objects/YourVisit__c/YourVisit__c.object-meta.xml
<CustomObject>
    <label>Your Visit</label>
    <nameField>
        <displayFormat>Appt-{000000}</displayFormat>
        <label>Your Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Your Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>