force-app/main/default/objects/YourVisit__c/fields/Appointment_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Time__c</fullName>
    <defaultValue>&#39;9:00 am&#39;</defaultValue>
    <label>Appointment Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>9:00 am</fullName>
                <default>true</default>
                <label>9:00 am</label>
            </value>
            <value>
                <fullName>9:30 am</fullName>
            </value>
            <value>
                <fullName>10:00 am</fullName>
            </value>
            <value>
                <fullName>10:30 am</fullName>
            </value>
            <value>
                <fullName>11:00 am</fullName>
            </value>
            <value>
                <fullName>11:30 am</fullName>
            </value>
            <value>
                <fullName>12:00 pm</fullName>
            </value>
            <value>
                <fullName>12:30 pm</fullName>
            </value>
            <value>
                <fullName>1:00 pm</fullName>
            </value>
            <value>
                <fullName>1:30 pm</fullName>
            </value>
            <value>
                <fullName>2:00 pm</fullName>
            </value>
            <value>
                <fullName>2:30 pm</fullName>
            </value>
            <value>
                <fullName>3:00 pm</fullName>
            </value>
            <value>
                <fullName>3:30 pm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>