force-app/main/default/objects/YourVisit__c/fields/ApptTime__c.field-meta.xml
<CustomField>
    <fullName>ApptTime__c</fullName>
    <label>ApptTime</label>
    <type>Time</type>
</CustomField>