force-app/main/default/objects/YourVisit__c/fields/Condition1__c.field-meta.xml
<CustomField>
    <fullName>Condition1__c</fullName>
    <label>Condition1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Symptom1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Conditions</valueSetName>
    </valueSet>
</CustomField>