force-app/main/default/objects/YourVisit__c/fields/OtherConcerns__c.field-meta.xml
<CustomField>
    <fullName>OtherConcerns__c</fullName>
    <label>OtherConcerns</label>
    <type>TextArea</type>
</CustomField>