force-app/main/default/objects/YourVisit__c/fields/Physician__c.field-meta.xml
<CustomField>
    <fullName>Physician__c</fullName>
    <defaultValue>&#39;No Preference&#39;</defaultValue>
    <label>Physician</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Symptom1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Physicians</valueSetName>
    </valueSet>
</CustomField>