force-app/main/default/objects/YourVisit__c/fields/Symptom1__c.field-meta.xml
<CustomField>
    <fullName>Symptom1__c</fullName>
    <defaultValue>&#39;Other&#39;</defaultValue>
    <label>Symptom1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Symptoms</valueSetName>
    </valueSet>
</CustomField>