force-app/main/default/objects/YourVisit__c/fields/Symptom2__c.field-meta.xml
<CustomField>
    <fullName>Symptom2__c</fullName>
    <defaultValue>&#39;other&#39;</defaultValue>
    <label>Symptom2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Symptoms</valueSetName>
    </valueSet>
</CustomField>