force-app/main/default/objects/YourVisit__c/validationRules/MustBeFutureDate.validationRule-meta.xml
<ValidationRule>
    <fullName>MustBeFutureDate</fullName>
    <active>true</active>
    <errorConditionFormula>Appointment_Date__c &lt; today()</errorConditionFormula>
    <errorDisplayField>Appointment_Date__c</errorDisplayField>
    <errorMessage>Date cannot be before today.</errorMessage>
</ValidationRule>