force-app/main/default/objects/YourVisit__c/listViews/Killjoy_Appointment_List_View.listView-meta.xml
<ListView>
    <fullName>Killjoy_Appointment_List_View</fullName>
    <columns>Appointment_Date__c</columns>
    <columns>Appointment_Time__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Symptom1__c</columns>
    <columns>OtherConcerns__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Physician__c</field>
        <operation>equals</operation>
        <value>Killjoy</value>
    </filters>
    <filters>
        <field>Appointment_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Killjoy Appointment List View</label>
</ListView>